# Google_cloud-Lab-2026

./: .gitignore  Dockerfile  Dockerfile.streamlit  Model.ipynb  Model.py  Test.py  app.py  pyproject.toml  requirements.txt  streamlit_app.py
